--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "bezhansalleh/filament-language-switch": "^1.0",
         "filament/filament": "^2.0",
         "filament/tables": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "mannikj/laravel-wallet": "^9.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -28,9 +30,13 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files":[
+            "app/helpers/cart_helpers.php"
+        ]
     },
     "autoload-dev": {
+        
         "psr-4": {
             "Tests\\": "tests/"
         }
